# cr6502emu

./: .gitignore  LICENSE.md  README.md
assembler/: Cargo.toml
assembler/js_snippets/: logger.js  regex.js
assembler/pkg/: assembler_dev.js
assembler/src/: js_logger.rs  js_regex.rs  lang.rs  lib.rs  opcodes.rs  utils.rs
assembler/src/assembler/: assembler.rs  assembler_tools.rs  interface.rs  js_logger.rs  label_manager.rs  mod.rs  parser.rs  parser_types.rs  re_patterns.rs
assembler/src/parser/: mod.rs  parser_addr.rs  parser_asm.rs  parser_types.rs  types_result.rs  (+1 more)
html_gui/: .env.development  .env.production  README.md  index.html  package-lock.json  package.json  vue.config.js
html_gui/src/: App.vue  i18n.js  main.js
scripts/: build-debug.sh  build-release.sh  build_debug.sh  build_release.sh  dev_server.sh  lxc_vue_build.sh  lxc_vue_dev_server.sh  lxc_vue_run_sh.sh
system/: Cargo.toml
system/js_snippets/: CappedLogger.js
system/src/: lib.rs  utils.rs
system/src/cpu/: mod.rs
system/src/cpu/cpu/: cpu.rs  current_opcode.rs  interface.rs  mod.rs  operation_manager.rs
system/src/cpu/opcode/: addr_modifier.rs  mod.rs  shared.rs
system/src/cpu/opcode/addressing_actions/: export.rs  internal.rs  mod.rs
system/src/cpu/opcode/behaviour/: addressing.rs  addressing_internal.rs  cycle_ref.rs  mod.rs  operations.rs  operations_internal.rs
system/src/cpu/opcode/decoder/: data.rs  decoder.rs  decoder_ac.rs  decoder_imp.rs  decoder_non_pattern.rs  decoder_rel.rs  mod.rs
system/src/cpu/opcode/operations_actions/: export.rs  internal.rs  mod.rs
system/src/cpu/register/: container.rs  generic.rs  mod.rs
system/src/dev/: factory.rs  holder.rs  id.rs  js_representation.rs  mod.rs  representation.rs  traits.rs  utils.rs
system/src/dev/io/: ascii_io_buffer.rs  mod.rs  screen.rs
system/src/dev/mem/: mod.rs  ram.rs  rom.rs
system/src/dev/traits/: addressable_device.rs  device.rs  mod.rs
system/src/system/: bus.rs  device_holder.rs  mem_manager.rs  mod.rs  system.rs
(+92 files in other folders)
