[package]
name = "system"
version = "0.3.1"
edition = "2018"

authors = ["dhr <dhr.git.pub@gmail.com>"]
repository = "https://github.com/dhreck/cr6502emu"
license = "GNU AGPLv3"
homepage = "https://github.com/dhreck/cr6502emu"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.44"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dependencies.web-sys]
version = "0.3.4"
features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
]

[profile.dev]
overflow-checks = false

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

overflow-checks = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
